sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:3: error: not found: value getNombresValeur
  var L = getNombresValeur()
          ^